Intro exercice, username, mode exam

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"lastOpened":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/Packs\/intro.pyzl","autoArgs":true,"terminalArgs":[""],"autoSave":true,"dragAndDrop":false}
+{"lastOpened":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/Packs\/intro.json","autoArgs":true,"terminalArgs":["bbb"],"userName":"Clem0","autoSave":true,"updateName":true,"dragAndDrop":true}
