--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"lastOpened":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/Packs\/intro.json","autoArgs":true,"terminalArgs":["bbb"],"userName":"Clem0","autoSave":true,"updateName":true,"dragAndDrop":true}
+{"autoArgs":true,"lastOpenedPath":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/Packs\/operations.pyzl","terminalArgs":["bbb"],"userName":"Clem","autoSave":true,"updateName":false,"dragAndDrop":true}
