--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"autoArgs":true,"lastOpenedPath":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/Packs\/operations.pyzl","terminalArgs":["bbb"],"userName":"Clem","autoSave":true,"updateName":false,"dragAndDrop":true}
+{"autoArgs":true,"lastOpenedPath":"\/home\/hamon\/Documents\/GitHub\/Pyzzle\/intro Clem21.spyzl","terminalArgs":["bbb"],"userName":"Clem21","autoSave":true,"updateName":false,"dragAndDrop":false}
